syntax = "proto3";

package private_school;
option go_package = "private_school.v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service GroupService {
  rpc CreateGroup(CreateGroupRequest) returns (GroupResponse);
  rpc GetGroup(GroupRequest) returns (GroupResponse);
  rpc UpdateGroup(UpdateGroupRequest) returns (GroupResponse);
  rpc DeleteGroup(GroupRequest) returns (google.protobuf.Empty);
  rpc ListGroups(ListGroupsRequest) returns (ListGroupsResponse);
}

message GroupResponse {
  string id = 1;
  string client_id = 2;
  string name = 3;
  optional string curator_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateGroupRequest {
  string client_id = 1;
  string name = 2;
  optional string curator_id = 3;
}


message GroupRequest {
  string id = 1;
  string client_id = 2;
}

message UpdateGroupRequest {
  string id = 1;
  string client_id = 2;
  string name = 3;
  string curator_id = 4;
}

message ListGroupsRequest {
  string client_id = 1;
  int32 page_size = 2;
  optional int64 cursor = 3;
  optional string name_filter = 4;
}

message ListGroupsResponse {
  repeated GroupResponse groups = 1;
  int64 next_cursor = 2;
}